@@ -1,0 +1,31 @@
+;;; -*- mode: emacs-lisp; coding: utf-8; -*-
+
+;; Copyright (C) 2008- Liu Xin
+;;
+;; This code has been released into the Public Domain.
+;; You may do whatever you like with it.
+;;
+;; @file
+;; @author Liu Xin <meteor1113@qq.com>
+;; @URL http://git.oschina.net/meteor1113/dotemacs
+
+;;; Commentary:
+
+;;; Code:
+
+;; fill-column-indicator
+;; (autoload 'fci-mode "fill-column-indicator" nil t)
+(setq fci-rule-column 80)
+(setq fci-rule-use-dashes t)
+(setq fci-dash-pattern 0.25)
+
+(define-globalized-minor-mode global-fci-mode fci-mode
+  (lambda ()
+    (if (and
+         (not (string-match "^\*.*\*$" (buffer-name)))
+         (not (eq major-mode 'dired-mode)))
+        (fci-mode 1))))
+
+(provide 'init-fci)
+
+;;; init-fci.el ends here
